deployment/manifests-values-addns/application/templates/ingress.yaml
---
# Source: application/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  labels:
    app: gateway
    group: com.stakater.platform
    provider: stakater
    version: "1.0.0"
    chart: "application-0.0.12"
    release: "RELEASE-NAME"
    heritage: "Tiller"
  annotations:
    forecastle.stakater.com/appName: Gateway-NAMESPACE
    forecastle.stakater.com/expose: true
    forecastle.stakater.com/group: Nordmart
    forecastle.stakater.com/icon: https://github.com/stakater/ForecastleIcons/raw/master/stakater.png
    ingress.kubernetes.io/force-ssl-redirect: true
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: external-ingress
    monitor.stakater.com/enabled: true
    spec:
  rules:
    - host: gateway-NAMESPACE.DOMAIN
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway
              servicePort: 8080
